Adds NFC functionality for device configuration
Enables NFC reader mode to receive and parse data for device configuration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "ant_bpwr.h": "c",
         "sdk_common.h": "c",
         "ble_cps.h": "c",
-        "ble_srv_common.h": "c"
+        "ble_srv_common.h": "c",
+        "nrfx.h": "c"
     }
 }
