--- a/pca10056/s340/armgcc/Makefile
+++ b/pca10056/s340/armgcc/Makefile
@@ -69,6 +69,7 @@ SRC_FILES += \
   $(PROJ_DIR)/device_info.c \
   $(PROJ_DIR)/ble_custom_config.c \
   $(PROJ_DIR)/nfc_handler.c \
+  $(PROJ_DIR)/reed_sensor.c \
   $(SDK_ROOT)/external/segger_rtt/SEGGER_RTT.c \
   $(SDK_ROOT)/external/segger_rtt/SEGGER_RTT_Syscalls_GCC.c \
   $(SDK_ROOT)/external/segger_rtt/SEGGER_RTT_printf.c \
