--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,9 @@
         "ble_cps.h": "c",
         "ble_srv_common.h": "c",
         "nrfx.h": "c",
-        "ble_custom_config.h": "c"
+        "ble_custom_config.h": "c",
+        "nfc_handler.h": "c",
+        "reed_sensor.h": "c",
+        "nrf_log.h": "c"
     }
 }
