--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,8 @@
         "nfc_handler.h": "c",
         "reed_sensor.h": "c",
         "nrf_log.h": "c",
-        "common_definitions.h": "c"
+        "common_definitions.h": "c",
+        "nrf_sdh_ant.h": "c",
+        "ble_conn_params.h": "c"
     }
 }
