--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,8 @@
         "nrf_log.h": "c",
         "common_definitions.h": "c",
         "nrf_sdh_ant.h": "c",
-        "ble_conn_params.h": "c"
+        "ble_conn_params.h": "c",
+        "ble_setup.h": "c",
+        "nrf_ble_gatt.h": "c"
     }
 }
