--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,14 @@
 {
+    "terminal.integrated.env.windows": {
+        "NRF5_SDK_ROOT": "D:/nRF5_SDK",
+        "Nrf.sdkRoot": "${env:NRF5_SDK_ROOT}",
+        "GNU_INSTALL_ROOT": "C:/gnu_arm_embedded"
+    },
+    "terminal.integrated.env.linux": {
+        "NRF5_SDK_ROOT": "/opt/nRF5_SDK_17.1.0_ddde560",
+        "GNU_INSTALL_ROOT": "/opt/gcc-arm-none-eabi-10.3-2021.10",
+        "Nrf.sdkRoot": "${env:NRF5_SDK_ROOT}",
+    },
     "files.associations": {
         "nrf_sdh_ble.h": "c",
         "nrf_sdh.h": "c",
