--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Set up environment variables
         run: |
           echo "NRF5_SDK_ROOT=/opt/nRF5_SDK_17.1.0_ddde560" >> $GITHUB_ENV
-          echo "GNU_INSTALL_ROOT=/opt/gcc-arm-none-eabi-10.3-2021.10/bin" >> $GITHUB_ENV
+          echo "GNU_INSTALL_ROOT=/opt/gcc-arm-none-eabi-10.3-2021.10/bin/" >> $GITHUB_ENV
           echo "GNU_VERSION=10.3.1" >> $GITHUB_ENV
           echo "GNU_PREFIX=arm-none-eabi" >> $GITHUB_ENV
       
@@ -55,7 +55,7 @@ jobs:
           nrfutil pkg generate --hw-version 52 --sd-req 0x00 \
             --application pca10056/s340/armgcc/_build/nrf52840_xxaa.hex \
             --application-version 1 \
-            --softdevice pca10056/s340/hex/s340_nrf52_7.0.1_softdevice.hex \
+            --softdevice pca10056/s340/hex/ANT_s340_nrf52_7.0.hex \
             satsbike_dfu.zip
       
       - name: Upload artifacts
