--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,11 @@ jobs:
           tar -xf gcc-arm-none-eabi-10.3-2021.10-x86_64-linux.tar.bz2 -C /opt/
           rm gcc-arm-none-eabi-10.3-2021.10-x86_64-linux.tar.bz2
       
+      - name: Patch SoftDevice headers
+        run: |
+          mkdir -p /opt/nRF5_SDK_17.1.0_ddde560/components/softdevice/s340/headers/
+          cp -r pca10056/s340/include/* /opt/nRF5_SDK_17.1.0_ddde560/components/softdevice/s340/headers/
+
       - name: Build project
         run: |
           cd pca10056/s340/armgcc
