--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,12 +44,17 @@ jobs:
           wget https://developer.arm.com/-/media/Files/downloads/gnu-rm/10.3-2021.10/gcc-arm-none-eabi-10.3-2021.10-x86_64-linux.tar.bz2
           tar -xf gcc-arm-none-eabi-10.3-2021.10-x86_64-linux.tar.bz2 -C /opt/
           rm gcc-arm-none-eabi-10.3-2021.10-x86_64-linux.tar.bz2
-      
+
       - name: Patch SoftDevice headers
         run: |
           mkdir -p /opt/nRF5_SDK_17.1.0_ddde560/components/softdevice/s340/headers/
           cp -r pca10056/s340/include/* /opt/nRF5_SDK_17.1.0_ddde560/components/softdevice/s340/headers/
 
+      - name: Inject ANT license key
+        run: |
+            sed -i 's|#define ANT_LICENSE_KEY .*|#define ANT_LICENSE_KEY "'"${{ secrets.ANT_LICENSE_KEY }}"'"|' \
+            /opt/nRF5_SDK_17.1.0_ddde560/components/softdevice/s340/headers/nrf52/nrf_sdm.h
+        
       - name: Build project
         run: |
           cd pca10056/s340/armgcc
