Refactors build process and adds versioning support
Updates build workflow to include CI flag for continuous integration builds
Allows for manual version override via VERSION environment variable
Injects version as a macro in the code

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,7 +85,7 @@ jobs:
       - name: Build application
         run: |
           cd pca10056/s340/armgcc
-          make -j4 RELEASE=1 OPT=-O3 VERSION="${{ steps.version.outputs.version }}"
+          make -j4 RELEASE=1 OPT=-O3 VERSION="${{ steps.version.outputs.version }}" CI=1
 
       - name: Generate DFU settings
         run: |
