--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,18 +92,26 @@ jobs:
           cd pca10056/s340/armgcc
           nrfutil settings generate --family NRF52840 \
             --application _build/nrf52840_xxaa.hex \
-            --application-version 1 \
+            --application-version ${{ github.run_number }} \
             --bootloader-version 1 \
             --bl-settings-version 2 \
             --app-boot-validation NO_VALIDATION \
             dfu_settings.hex
 
+#      - name: Merge firmware hex
+#        run: |
+#          cd pca10056/s340/armgcc
+#          mergehex --merge \
+#            ../hex/ANT_s340_nrf52_7.0.1.hex \
+#            ../../../bootloader/bootloader_s340/armgcc/_build/satsbike_bootloader_s340.hex \
+#            _build/nrf52840_xxaa.hex \
+#            dfu_settings.hex \
+#            --output merged_firmware.hex
+        
       - name: Merge firmware hex
         run: |
           cd pca10056/s340/armgcc
           mergehex --merge \
-            ../hex/ANT_s340_nrf52_7.0.1.hex \
-            ../../../bootloader/bootloader_s340/armgcc/_build/satsbike_bootloader_s340.hex \
             _build/nrf52840_xxaa.hex \
             dfu_settings.hex \
             --output merged_firmware.hex
