Adds support for BLE battery service and updates FTMS and CPS services
This commit adds support for the BLE battery service by including the "ble_battery_service" files, which consist of the "ble_battery_service.c" and "ble_battery_service.h" files. Additionally, the FTMS and CPS services have been updated to use the new battery service. This change allows for better management and monitoring of the battery level and power state.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
         "nrf_dfu.h": "c",
         "ble_dfu.h": "c",
         "nrf_dfu_ble_svci_bond_sharing.h": "c",
-        "nrf_svci.h": "c"
+        "nrf_svci.h": "c",
+        "ble_battery_service.h": "c"
     }
 }
