--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,6 +87,10 @@ jobs:
           cd pca10056/s340/armgcc
           make -j4 RELEASE=1 OPT=-O3 VERSION="${{ steps.version.outputs.version }}" CI=1
 
+      - name: Write DFU private key to disk
+        run: |
+          echo "${{ secrets.DFU_PRIVATE_KEY }}" > private_key.pem
+
       - name: Generate DFU settings
         run: |
           cd pca10056/s340/armgcc
@@ -95,7 +99,7 @@ jobs:
             --application-version ${{ github.run_number }} \
             --bootloader-version 1 \
             --bl-settings-version 2 \
-            --app-boot-validation NO_VALIDATION \
+            --app-boot-validation CRC \
             dfu_settings.hex
 
 #      - name: Merge firmware hex
@@ -123,6 +127,7 @@ jobs:
             --application pca10056/s340/armgcc/_build/nrf52840_xxaa.hex \
             --application-version ${{ github.run_number }} \
             --sd-req 0xCE \
+            --key-file private_key.pem \
             satsbike_dfu-${VERSION}.zip
             
       - name: Upload artifacts
