--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,7 @@
         "ble_dfu.h": "c",
         "nrf_dfu_ble_svci_bond_sharing.h": "c",
         "nrf_svci.h": "c",
-        "ble_battery_service.h": "c"
+        "ble_battery_service.h": "c",
+        "arduino_nano_33_ant.h": "c"
     }
 }
