Set hardware version

--- a/pca10056/s340/armgcc/Makefile
+++ b/pca10056/s340/armgcc/Makefile
@@ -239,6 +239,7 @@ FIRMWARE_VERSION ?= $(GIT_VERSION)
 
 # Inject version as macro
 CFLAGS += -DFIRMWARE_VERSION=\"$(FIRMWARE_VERSION)\"
+CFLAGS += -DHARDWARE_REVISION_DEFAULT=\"Rev_$(BOARD_UPPER)\"
 
 ifeq ($(RELEASE),1)
   OPT = -O3
